added side-bar-closed menu for medium screen

--- a/src/app/navbar/side-bar-close/side-bar-close.component.html
+++ b/src/app/navbar/side-bar-close/side-bar-close.component.html
@@ -1,1 +1,138 @@
-<p>side-bar-close works!</p>
+<nav class="mt-1 font-sans text-gray-950 font-bold space-y-3">
+    <!-- Dashboard Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md': isActive('dashboard') && isPath('dashboard')}"
+        (mouseover)="setRouterName('Dashboard')" (mouseout)="clearRouterName()">
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard" class="text-md">
+                <feather-icon name="package" class="text-xl cursor-pointer" style="width: 30px;"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='Dashboard'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- Tasks Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md px-2 ': isActive('dashboard/my-tasks')}"
+        (mouseover)="setRouterName('My-tasks')" (mouseout)="clearRouterName()">
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard/my-tasks" class="text-md">
+                <feather-icon name="activity" class="text-xl " style="width: 26px;"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='My-tasks'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- Notifications Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md px-2 bg-w-full': isActive('dashboard/my-notifications')}"
+        (mouseover)="setRouterName('My-notifications')" (mouseout)="clearRouterName()">
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard/my-notifications" class="text-md">
+                <feather-icon name="inbox" class="text-xl cursor-pointer" style="width: 26px;"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='My-notifications'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- Workspace Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md px-2 bg-w-full': isActive('dashboard/workspace')}"
+        (mouseover)="setRouterName('Workspace')" (mouseout)="clearRouterName()">
+
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard/workspace" class="text-md">
+                <feather-icon name="globe" class="text-xl " style="width: 26px;"></feather-icon>
+                <span class="capitalize fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='Workspace'">
+                    {{ userData.role }} {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- Profile Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md px-2 bg-w-full': isActive('dashboard/profile')}"
+        (mouseover)="setRouterName('Profile')" (mouseout)="clearRouterName()">
+
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard/profile" class="text-md">
+                <feather-icon name="user" class="text-xl " style="width: 26px;"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='Profile'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- Separator Line -->
+    <hr class="text-gray-200 my-6">
+    <!-- To-do List Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md px-2 bg-w-full': isActive('dashboard/my-todos')}"
+        (mouseover)="setRouterName('My-todos')" (mouseout)="clearRouterName()">
+
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard/my-todos" class="text-md">
+                <feather-icon name="calendar" class="text-xl " style="width: 26px;"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='My-todos'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- Subscriptions Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md px-2 bg-w-full': isActive('dashboard/my-subscriptions')}"
+        (mouseover)="setRouterName('My-subscriptions')" (mouseout)="clearRouterName()">
+
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard/my-subscriptions" class="text-md">
+                <feather-icon name="Airplay" class="text-xl " style="width: 24px;"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='My-subscriptions'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- FAQs Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md px-2 bg-w-full': isActive('dashboard/my-faqs')}"
+        (mouseover)="setRouterName('My-faqs')" (mouseout)="clearRouterName()">
+
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard/my-faqs" class="text-md">
+                <feather-icon name="message-square" class="text-xl " style="width: 26px;"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='My-faqs'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- Settings Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        [ngClass]="{'bg-gray-200 rounded-md px-2 bg-w-full': isActive('dashboard/settings')}"
+        (mouseover)="setRouterName('Settings')" (mouseout)="clearRouterName()">
+        <h1 class="flex items-center justify-center">
+            <a routerLink="/dashboard/settings" class="text-md">
+                <feather-icon name="settings" class="text-xl " style="width: 26px;"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='Settings'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+    <!-- Logout Link -->
+    <div class="cursor-pointer p-1 duration-300 hover:bg-gray-100 w-12 hover:rounded-md hover:p-2"
+        (mouseover)="setRouterName('Logout')" (mouseout)="clearRouterName()" (click)="logout()">
+        <h1 class="flex items-center justify-center">
+            <a class="text-md">
+                <feather-icon name="log-out" class="text-xl"></feather-icon>
+                <span class="fixed ml-4 text-gray-500 italic text-sm" *ngIf="currentRouteName==='Logout'">
+                    {{ currentRouteName }}
+                </span>
+            </a>
+        </h1>
+    </div>
+</nav>
