modified login page

--- a/src/app/login/login-hero/login-hero.component.html
+++ b/src/app/login/login-hero/login-hero.component.html
@@ -1,8 +1,10 @@
-<section class="bg-gray-950 rounded-md w-full flex items-center justify-center">
-    <div class="grid grid-cols-2">
-    <a [routerLink]="['/home']" class="">
-        <img class="w-full cursor-pointer rounded-lg" src="../../../assets/landing/hero-bg-6.jpg">
-    </a>
+<section class="bg-gray-950 rounded-md mx-auto flex items-center justify-center">
+    <div class="flex items-center w-full">
+        <a [routerLink]="['/home']">
+            <img class="cursor-pointer w-full object-cover md:h-96 rounded-lg"
+                src="../../../assets/landing/hero-bg-4.jpg">
+        </a>
+    </div>
     <div class="flex items-center">
         <div class="mx-auto">
             <h1 class="font-sans font-bold text-red-600 text-center uppercase md:text-xl text-md w-full">
@@ -13,5 +15,4 @@
             </h6>
         </div>
     </div>
-</div>
 </section>
