--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,8 +1,11 @@
-<div class="md:rounded-r-md rounded-b-md p-4 md:p-10 grid grid-cols md:grid-cols-2">
-    <div class="flex">
+<div class="flex items-center justify-center h-screen">
+    <div class="w-full rounded-b-md md:rounded-r-md p-4 md:p-6 grid grid-cols md:grid-cols-2">
+      <div class="flex items-center justify-center">
         <app-login-hero></app-login-hero>
-    </div>
-    <div class="flex flex-col m-4 gap-2">
+      </div>
+      <div class="flex items-center justify-center">
         <app-login-form></app-login-form>
+      </div>
     </div>
-</div>
+  </div>
+  
