--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<section class="mt-4 p-2 flex justify-center">
+<section class="mt-4 p-2 flex justify-center items-center">
     <div class="border-2 border-gray-400 bg-gray-100 rounded-md  min-w-[200px]"
         [ngClass]="{'border-red-400': loginForm.invalid && invalidForm && loginForm.touched}">
         <form [formGroup]="loginForm">
