modified login page

--- a/src/app/dashboard/user/forgot-password-modal/forgot-password-modal.component.html
+++ b/src/app/dashboard/user/forgot-password-modal/forgot-password-modal.component.html
@@ -5,16 +5,16 @@
     <form [formGroup]="forgotPasswordForm">
         <div class="grid grid-cols-1 mt-2">
             <input formControlName="email"
-                class="w-full border-2 px-4 py-2 rounded-md m-2 hover:border-gray-400 focus:border-gray-400 focus:outline-none"
-                [ngClass]="{'border-red-400': forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.touched
-            && forgotPasswordForm.invalid}" placeholder="please input your email here" type="text">
-            <div *ngIf="forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.touched"
-                class="text-red-500 mx-2">
+                class="border-b-2 border-gray-500 w-full hover:border-gray-700 focus:border-gray-800 focus:outline-none"
+                [ngClass]="{'border-red-600': forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.touched
+            && forgotPasswordForm.invalid}" placeholder="Please input your email here" type="text">
+            <div *ngIf="forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.dirty"
+                class="text-red-600 mx-2">
                 Email is invalid
             </div>
         </div>
-        <div class="flex justify-center">
-            <button class="bg-red-600 p-2 px-2 rounded-md font-bold font-sans text-gray-200 text-sm" type="submit"
+        <div class="mt-4 flex justify-center">
+            <button class="bg-red-600 p-2 px-2 rounded-md font-bold font-sans text-white text-sm" type="submit"
                 (click)="submitForm()">
                 Send email
             </button>
