--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,11 +1,10 @@
 <div class="flex items-center justify-center h-screen">
-    <div class="w-full rounded-b-md md:rounded-r-md p-4 md:p-6 grid grid-cols md:grid-cols-2">
-      <div class="flex items-center justify-center">
-        <app-login-hero></app-login-hero>
-      </div>
-      <div class="flex items-center justify-center">
-        <app-login-form></app-login-form>
-      </div>
+    <div class="w-full space-y-8 rounded-b-md md:rounded-r-md p-4 md:p-6 grid grid-cols md:grid-cols-2">
+        <div class="flex items-center justify-center">
+            <app-login-hero></app-login-hero>
+        </div>
+        <div class="flex items-center justify-center">
+            <app-login-form></app-login-form>
+        </div>
     </div>
-  </div>
-  
+</div>
